# Sync-Scansia

./: .gitignore  CLAUDE.md  FIX_APPLIED.md  FIX_APPLIED_v2.md  FIX_PRICES_README.md  NUOVE_FUNZIONALITA.md  README.md  README_DEPLOY_FIX.md  SHOPIFY_PERMISSIONS_REQUIRED.md  TRACKER.md  WORKAROUND_LOCATIONS.md  fix_prices.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: __init__.py  app.py  config.py
backend/api/: __init__.py  delete_outlet.py  errors.py  init.py  inventory.py  jobs.py  mutations.py  prices.py  publish.py  read.py  ui.py
backend/auth/: __init__.py  basic_auth.py
backend/gsheet/: __init__.py  reader.py  writer.py
backend/persistence/: __init__.py  gsheet_audit.py  ports.py  tokens.py
backend/services/: __init__.py  delete_service.py  (+4 more)
docs/: business-context.md  handoff-M2-server.md  handoff-M2-shared-secrets.md  handoff-M3-automate.md  handoff-deploy-check-server.md  init-reconcile-design.md  testing.md
reorder/: REORDER_COLLECTION_DOCS.md  REORDER_UPDATE_v1.1.md  cazzo
src/: channel_manager.py  config.py  exceptions.py  gsheets.py  gsheets_client.py  reorder_collection.py  shopify_client.py  sync.py  utils.py  variant_reset.py
tests/: __init__.py  conftest.py  test_api_delete.py  test_api_init.py  test_api_prices.py  test_api_publish.py  test_api_read.py  test_api_ui.py  test_app.py  test_auth.py  test_config.py  test_delete_service.py  test_gsheet.py  test_init_service.py  test_ops.py  test_ops_netnew.py  test_outlet_service.py  test_persistence.py  test_pricing_service.py  test_resolvers.py  test_transport.py
(+6 files in other folders)
