[tool.pytest.ini_options]
# runtime.txt pins Python 3.12.4 for the Render deploy target; pytest also
# runs fine locally on newer interpreters. This file only wires import paths
# for the test harness — the project ships via requirements.txt, not
# `pip install .`, so there is no [project]/[build-system] table here.
testpaths = ["tests"]
pythonpath = ["."]
